monitoring/master/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          name: grafana
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
#          resources:
#            limits:
#              memory: 4Gi
#            requests:
#              cpu: 100m
#              memory: 2Gi
#          volumeMounts:
#            - mountPath: /var/lib/grafana
#              name: grafana
#            - mountPath: /etc/grafana
#              name: grafana-config
      volumes:
        - name: grafana
          persistentVolumeClaim:
            claimName: grafana
#        - name: grafana-config
#          configMap:
#            name: grafana-config
