monitoring/master/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: grafana
  namespace: monitoring

spec:
  rules:
  - hosts: grafana.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
